Convert existing models to DSTUv2.
FHIR ballot version DSTUv2 has been implemented in Medication-related models,
but models made previously were still made in conformance with DSTUv1.

This commit updates remaining models to conform to DSTUv2.
The most fundamental changes this creates:
* Name becomes HumanName, which now contains lists of Given and Family names
  instead of First, Middle, Last. First and Middle are now given(0) and
  given(1). Getters/Setters for First/Middle/Last have been reintroduced
  to simplify this transition.
* CodeableConcept now has a list of codes instead of one.
* Many Models, Elements, and Datatypes were added to map DSTUv2 as closely
  as possible.
* Unit and Integration tests should be up to date and functional.
* In the models, some errors in comments and spelling have been fixed.
* Language codes as an enum have been removed, "Patient Communications" are
  now stored as CodeableConcept.

Addresses Jira task SAPP-102.